# try-gh-action

./: CMakeLists.txt  main.cpp
.github/workflows/: ci.yml
